# skillseeker

./: .env.example  .gitignore  README.md  __init__.py  aggregator.py  pyproject.toml  test_aggregator.py  test_skillseeker.py
skillseeker/: __init__.py  skillseeker.py
tests/: test_skillseeker.py
